welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: type mismatch;
 found   : Int
 required: Boolean
    if(isPresent(num:Array[Int] ,i:Int))
                ^island:15: error: type mismatch;
 found   : Boolean(true)
 required: Int
    	return true
               ^island:17: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^